# hax

task3/: CMakeLists.txt  script.py
